# sentiments

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  prepare_data.sh  run.py  run.sh  sentiment.cpp  sentiment.h  sentiment.i  setup.py  swig.sh  test.sh
